--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+EMAIL_ACTIVE_LINK_PREFIX="http://localhost:8000/api/v1/activation/"
