--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/passport": "^10.4",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "nesbot/carbon": "^2.59"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
